PSS/wwwroot/css/UploadApply.css
* {
    color: white;
    font-family: 'Product Sans', serif;
    scrollbar-width: none !important;
    --left-margin: 146px; /* For things with absolute positioning, how far to be away from left side of page */
}

header {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: absolute;
    top: 0;
    left: var(--left-margin);
}

header > button {
    margin-top: 10px;
    margin-right: 12px;
    color: white; /* Icon Color */
    background-color: black;
    border: 1px solid white;
    border-radius: 4px;
    display: flex;
    word-break: break-word;
    word-wrap: break-word;
    align-items: center;
    letter-spacing: .01785714em;
    font-family: Product Sans, sans-serif;
    font-size: 1rem;
    font-weight: 400;
    padding: 11px 17px;
}

header > button:hover {
    background-color: rgba(211, 211, 211, 0.1);
    cursor: pointer;
}

/*Add a little space to right of button icon*/
header > button span ~ span {
    padding-left: 11px;
    text-decoration: none;
}

#filter {
    display: flex;
    flex-direction: column;
    position: absolute;
    left: var(--left-margin);
    z-index: 9999;
    background-color: black;
    top: 10px;
    border: 1px solid white;
}

#filter input, #filter label {
    margin-right: 6px;
}

#filter > label {
    user-select: none;
    width: 100%;
    padding-top: 6px;
    padding-bottom: 6px;
}

#filter > label:hover {
    background-color: rgba(211, 211, 211, 0.1);
}

header > input[type="text"] {
    color: black; /* Font */
    margin-top: 12px;
    margin-left: 0;
    width: 200px;
    font-size: 16px;
    margin-right: 11px;
}

header > #statusSpan {
    margin-top: 10px;
    margin-left: 10px;
}

#textAndAlbums {
    z-index: 9999;
    background-color: black;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    right: 10px;
    top: 110px;
    border: 1px solid white;
    padding: 10px;
}

#textAndAlbums > #albums {
    margin-top: 4px;
    display: flex;
    flex-direction: column;
    border: 1px solid white;
    padding-right: 2px;
    user-select: none;
    width: 300px;
    height: 400px;
    overflow-y: scroll;
    overflow-x: hidden;
}

/*Div that groups cover, checkbox, etc. together*/
#textAndAlbums > #albums > .album {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    width: auto;
}

#textAndAlbums > #albums > .album:hover {
    background-color: rgba(211, 211, 211, 0.1);
    cursor: pointer;
}

/*Not sure if good/best solution but used to have every cover same size and aligned*/
#textAndAlbums > #albums > .album > .coverDiv {
    margin: 0;
    padding: 0;
    display: flex;
}

#textAndAlbums > #albums > .album > .coverDiv > img {
    border: 1px solid black;
    background-color: #212121;
    border-radius: 4px;
    object-fit: cover;
    width: 60px;
    height: 60px;
}

#textAndAlbums > #albums > .album > input[type="checkbox"] {
    margin-left: 7px;
}

#textAndAlbums > #albums > .album > span {
    margin-top: -4px;
    margin-left: 6px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#mainDiv {
    position: absolute;
    left: 145px;
    top: 71px;
}

#mainDiv > .itemDiv {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-bottom: 10px;
}

#mainDiv > .itemDiv > button {
    margin-left: 4px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: center;
    width: 50px;
    height: 50px;
    border: none;
    background: none;
}

#mainDiv > .itemDiv > button:hover {
    background-color: rgba(211, 211, 211, 0.1);
    cursor: pointer;
}

#mainDiv > .itemDiv > img {
    width: 6%;
    vertical-align: middle; /*https://stackoverflow.com/a/489394*/
}

#mainDiv > .itemDiv > img:hover { /*https://stackoverflow.com/a/25036868*/
    -webkit-transform: scale(1.9);
    transform: scale(1.9);
    cursor: pointer;
}

#mainDiv > .itemDiv > span {
    margin-left: 10px;
}

#mainDiv > .itemDiv > .filenameSpan {
    width: 60px;
    overflow: scroll;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#mainDiv > .itemDiv > input {
    width: 205px;
    color: black; /*Font color*/
    margin-left: 11px;
    border: none;
}

#mainDiv > .itemDiv > .infoSpan {margin-left: 13px; color: #93ccdc;}
#mainDiv > .itemDiv > .warnSpan {color: yellow;}
#mainDiv > .itemDiv > .errorSpan {color: red;}

